Third task finished

--- a/Projekat2/Views/Shared/_Layout.cshtml
+++ b/Projekat2/Views/Shared/_Layout.cshtml
@@ -20,16 +20,16 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="CustomerDemographics" asp-action="Index">CustomerDemographics</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Customers" asp-action="Index">Customers</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="CustomerCustomerDemoes" asp-action="Index">AddCustomersOrCustomersDemographics</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="CustomerCustomerDemoes" asp-action="Index">AddCustomersAndCustomersDemographics</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Products" asp-action="Index">Products</a>
                         </li>
                     </ul>
                 </div>
