--- a/Projekat2/Views/CustomerDemographics/Create.cshtml
+++ b/Projekat2/Views/CustomerDemographics/Create.cshtml
@@ -4,34 +4,36 @@
     ViewData["Title"] = "Create";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<div class="container">
+    <h1>Create</h1>
 
-<h1>Create</h1>
-
-<h4>CustomerDemographics</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="CustomerTypeId" class="control-label"></label>
-                <input asp-for="CustomerTypeId" class="form-control" />
-                <span asp-validation-for="CustomerTypeId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="CustomerDesc" class="control-label"></label>
-                <input asp-for="CustomerDesc" class="form-control" />
-                <span asp-validation-for="CustomerDesc" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
+    <h4>CustomerDemographics</h4>
+    <hr />
+    <div class="row">
+        <div class="col-md-4">
+            <form asp-action="Create">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <div class="form-group">
+                    <label asp-for="CustomerTypeId" class="control-label"></label>
+                    <input asp-for="CustomerTypeId" class="form-control" />
+                    <span asp-validation-for="CustomerTypeId" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="CustomerDesc" class="control-label"></label>
+                    <input asp-for="CustomerDesc" class="form-control" />
+                    <span asp-validation-for="CustomerDesc" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <input type="submit" value="Create" class="btn btn-primary" />
+                </div>
+            </form>
+        </div>
     </div>
-</div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
+    <div>
+        <a asp-action="Index">Back to List</a>
+    </div>
+
 </div>
 
 @section Scripts {
