--- a/Projekat2/Views/CustomerDemographics/Details.cshtml
+++ b/Projekat2/Views/CustomerDemographics/Details.cshtml
@@ -5,21 +5,24 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Details</h1>
+<div class="container">
+    <h1>Details</h1>
 
-<div>
-    <h4>CustomerDemographics</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CustomerDesc)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CustomerDesc)
-        </dd>
-    </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model.CustomerTypeId">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <div>
+        <h4>CustomerDemographics</h4>
+        <hr />
+        <dl class="row">
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.CustomerDesc)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.CustomerDesc)
+            </dd>
+        </dl>
+    </div>
+    <div>
+        <a asp-action="Edit" asp-route-id="@Model.CustomerTypeId">Edit</a> |
+        <a asp-action="Index">Back to List</a>
+    </div>
+
 </div>
