--- a/Projekat2/Views/CustomerDemographics/Edit.cshtml
+++ b/Projekat2/Views/CustomerDemographics/Edit.cshtml
@@ -5,30 +5,34 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Edit</h1>
+<div class="container">
+    <h1>Edit</h1>
 
-<h4>CustomerDemographics</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Edit">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="CustomerTypeId" />
-            <div class="form-group">
-                <label asp-for="CustomerDesc" class="control-label"></label>
-                <input asp-for="CustomerDesc" class="form-control" />
-                <span asp-validation-for="CustomerDesc" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
-            </div>
-        </form>
+    <h4>CustomerDemographics</h4>
+    <hr />
+    <div class="row">
+        <div class="col-md-4">
+            <form asp-action="Edit">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <input type="hidden" asp-for="CustomerTypeId" />
+                <div class="form-group">
+                    <label asp-for="CustomerDesc" class="control-label"></label>
+                    <input asp-for="CustomerDesc" class="form-control" />
+                    <span asp-validation-for="CustomerDesc" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <input type="submit" value="Save" class="btn btn-primary" />
+                </div>
+            </form>
+        </div>
+    </div>
+
+    <div>
+        <a asp-action="Index">Back to List</a>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
