--- a/Projekat2/Views/Shared/_Layout.cshtml
+++ b/Projekat2/Views/Shared/_Layout.cshtml
@@ -39,14 +39,13 @@
             </div>
         </nav>
     </header>
-    <div class="container">
-        <main role="main" class="pb-3">
-            @RenderBody()
-        </main>
-    </div>
-
+    
+    <main role="main" class="pb-3">
+        @RenderBody()
+    </main>
+    
     <footer class="border-top footer text-muted">
-        <div class="container">
+        <div class="container-fluid" style="text-align:center">
             &copy; 2021 - Igor Brdaric RIN-31/19
         </div>
     </footer>
