--- a/Projekat2/Views/Customers/Create.cshtml
+++ b/Projekat2/Views/Customers/Create.cshtml
@@ -5,16 +5,19 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Create</h1>
+<div class="container">
+    <h1>Create</h1>
 
-<h4>Customers</h4>
-<hr />
+    <h4>Customers</h4>
+    <hr />
 
-<partial name ="CreateCustomerPartial" for=@Model view-data="ViewData">
+    <partial name="CreateCustomerPartial" for=@Model view-data="ViewData">
 
-<div>
-    <a asp-action="Index">Back to List</a>
+        <div>
+            <a asp-action="Index">Back to List</a>
+        </div>
 </div>
+
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
