--- a/Projekat2/Views/Products/Index.cshtml
+++ b/Projekat2/Views/Products/Index.cshtml
@@ -9,11 +9,11 @@
     <form asp-action="Filter">
         <div class="form-group">
             <label asp-for="@Model.CategoryId" class="control-label"></label>
-            <select asp-for="@Model.CategoryId" class="form-control" asp-items="ViewBag.SupplierId"></select>
+            <select asp-for="@Model.CategoryId" class="form-control" asp-items="ViewBag.CategoryId"></select>
         </div>
         <div class="form-group">
             <label asp-for="@Model.SupplierId" class="control-label"></label>
-            <select asp-for="@Model.SupplierId" class="form-control" asp-items="ViewBag.CategoryId"></select>
+            <select asp-for="@Model.SupplierId" class="form-control" asp-items="ViewBag.SupplierId"></select>
         </div>
         <div class="form-group">
             <input type="submit" value="Filter" class="btn btn-primary" style="width:100%" />
